--- a/style.css
+++ b/style.css
@@ -27,9 +27,7 @@
   padding: 6px 6px;
 }
 
-.ans{
-  width: inherit;
-  height: 50px;
+#ans{
   text-align: right;
   overflow: hidden;
   padding-top: 15px;
@@ -43,10 +41,10 @@
   grid-gap: 6px 6px;
 }
 
-#equal{
+#equals{
   grid-column: 3/5;
 }
-#equal:hover{
+#equals:hover{
   background-color: limegreen;
   transition: background-color 0.2s;
 }
