--- a/style.css
+++ b/style.css
@@ -1,30 +1,47 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: rgb(18, 26, 31);
+}
+
+header{
+  text-align: center;
+  color: whitesmoke;
+  margin: 20px 0 30px 0;
+}
+
+#container{
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #calculator{
-  width: 350px;
-  height: 500px;
+  width: 90%;
+  max-width: 400px;
+  background-color: rgb(39, 55, 59);
+  border-radius: 8px;
+  overflow: hidden; 
   margin: auto;
-  background-color: gray;
   display: grid;
   grid-template-rows: 1fr 4fr;
   box-sizing: border-box;
-  border-radius: 20px;
 }
 
 #display-screen{
-  margin: 20px;
-  width: 310px;
+  background-color: rgb(182, 182, 182);
   height: 100px;
-  background-color: white;
-  font-family: 'Orbitron', sans-serif;
-  font-size: 25px;
-  border: 1px solid black;
-  box-shadow: inset 2px 3px 5px 0px rgb(0 0 0 / 70%)}
-
-.screen{
-  width: inherit;
-  height: 50px;
-  box-sizing: border-box;
-  overflow-x: auto;
-  padding: 6px 6px;
+  width: 100%;
+  text-align: left;
+  padding: 20px;
+  font-size: 30px;
+  position: relative;
 }
 
 #ans{
@@ -34,29 +51,32 @@
 }
 
 .buttons{
-  background-color: grey;
-  margin: 0 20px 20px 20px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 6px 6px;
 }
 
 #equals{
   grid-column: 3/5;
 }
-#equals:hover{
-  background-color: limegreen;
-  transition: background-color 0.2s;
+
+button {
+  font-size: 30px;
+  cursor: pointer;
+  background-color: rgb(39, 55, 59);
+  color: whitesmoke;
+  border:0.5px solid rgba(92, 92, 92, 0.137);
 }
 
-button{
-  border-radius: 50px;
-  border: none;
-  transition: all 0.15s;
-  box-shadow: 4px 5px 5px 0px rgb(0 0 0 / 50%);
+button:hover {
+  background-color: rgb(30, 43, 46);
 }
 
-button:hover{
-  background-color: rgb(177, 219, 255);
-  transform: translateY(-0.2rem);
+footer{
+  color: whitesmoke;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
